--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -82,59 +82,59 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
   @SuppressWarnings('PMD.ApexCRUDViolation')
   public static List<Rollup__mdt> getRollupMetadata() {
     List<Rollup__mdt> matchingMetadata = [
-        SELECT
-          MasterLabel,
-          DeveloperName,
-          LookupObject__c,
-          LookupObjectText__c,
-          LookupObject__r.QualifiedApiName,
-          CalcItem__c,
-          CalcItemText__c,
-          CalcItem__r.QualifiedApiName,
-          RollupFieldOnCalcItem__c,
-          RollupFieldOnCalcItemText__c,
-          RollupFieldOnCalcItem__r.QualifiedApiName,
-          LookupFieldOnCalcItem__c,
-          LookupFieldOnCalcItemText__c,
-          LookupFieldOnCalcItem__r.QualifiedApiName,
-          LookupFieldOnLookupObject__c,
-          LookupFieldOnLookupObjectText__c,
-          LookupFieldOnLookupObject__r.QualifiedApiName,
-          RollupFieldOnLookupObject__c,
-          RollupFieldOnLookupObjectText__c,
-          RollupFieldOnLookupObject__r.QualifiedApiName,
-          UltimateParentLookup__c,
-          UltimateParentLookup__r.QualifiedApiName,
-          CalcItemWhereClause__c,
-          ChangedFieldsOnCalcItem__c,
-          ConcatDelimiter__c,
-          CurrencyFieldMapping__c,
-          FullRecalculationDefaultNumberValue__c,
-          FullRecalculationDefaultStringValue__c,
-          GrandparentRelationshipFieldPath__c,
-          GroupByFields__c,
-          GroupByRowEndDelimiter__c,
-          GroupByRowStartDelimiter__c,
-          IsDistinct__c,
-          IsFullRecordSet__c,
-          IsRollupStartedFromParent__c,
-          IsTableFormatted__c,
-          LimitAmount__c,
-          OneToManyGrandparentFields__c,
-          OrderByFirstLast__c,
-          RollupControl__c,
-          RollupOperation__c,
-          RollupToUltimateParent__c,
-          SharingMode__c,
-          ShouldRunWithoutCustomSettingEnabled__c,
-          SplitConcatDelimiterOnCalcItem__c,
-          (SELECT Id, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r ORDER BY Ranking__c, DeveloperName),
-          RollupGrouping__r.Id,
-          RollupGrouping__r.RollupOperation__c
-        FROM Rollup__mdt
-        WHERE RollupControl__r.ShouldAbortRun__c = FALSE
-        ORDER BY LookupObject__c
-      ];
+      SELECT
+        MasterLabel,
+        DeveloperName,
+        LookupObject__c,
+        LookupObjectText__c,
+        LookupObject__r.QualifiedApiName,
+        CalcItem__c,
+        CalcItemText__c,
+        CalcItem__r.QualifiedApiName,
+        RollupFieldOnCalcItem__c,
+        RollupFieldOnCalcItemText__c,
+        RollupFieldOnCalcItem__r.QualifiedApiName,
+        LookupFieldOnCalcItem__c,
+        LookupFieldOnCalcItemText__c,
+        LookupFieldOnCalcItem__r.QualifiedApiName,
+        LookupFieldOnLookupObject__c,
+        LookupFieldOnLookupObjectText__c,
+        LookupFieldOnLookupObject__r.QualifiedApiName,
+        RollupFieldOnLookupObject__c,
+        RollupFieldOnLookupObjectText__c,
+        RollupFieldOnLookupObject__r.QualifiedApiName,
+        UltimateParentLookup__c,
+        UltimateParentLookup__r.QualifiedApiName,
+        CalcItemWhereClause__c,
+        ChangedFieldsOnCalcItem__c,
+        ConcatDelimiter__c,
+        CurrencyFieldMapping__c,
+        FullRecalculationDefaultNumberValue__c,
+        FullRecalculationDefaultStringValue__c,
+        GrandparentRelationshipFieldPath__c,
+        GroupByFields__c,
+        GroupByRowEndDelimiter__c,
+        GroupByRowStartDelimiter__c,
+        IsDistinct__c,
+        IsFullRecordSet__c,
+        IsRollupStartedFromParent__c,
+        IsTableFormatted__c,
+        LimitAmount__c,
+        OneToManyGrandparentFields__c,
+        OrderByFirstLast__c,
+        RollupControl__c,
+        RollupOperation__c,
+        RollupToUltimateParent__c,
+        SharingMode__c,
+        ShouldRunWithoutCustomSettingEnabled__c,
+        SplitConcatDelimiterOnCalcItem__c,
+        (SELECT Id, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r),
+        RollupGrouping__r.Id,
+        RollupGrouping__r.RollupOperation__c
+      FROM Rollup__mdt
+      WHERE RollupControl__r.ShouldAbortRun__c = FALSE
+      ORDER BY LookupObject__c
+    ];
     // we have to do transforms on the Entity Definition fields because custom objects/custom fields
     // have references that otherwise won't work with the rest of the code
     for (Rollup__mdt meta : matchingMetadata) {
@@ -149,6 +149,7 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
       meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
       meta.SharingMode__c = meta.SharingMode__c ?? RollupMetaPicklists.SharingMode.SystemLevel;
       meta.UltimateParentLookup__c = meta.UltimateParentLookup__r.QualifiedApiName;
+      meta.RollupOrderBys__r.sort(new OrderBySorter());
     }
 
     return matchingMetadata;
@@ -160,5 +161,35 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
 
   private System.AccessLevel transformPermissionLevel(RunAsMode currentRunAs) {
     return currentRunAs == RunAsMode.USER ? System.AccessLevel.USER_MODE : System.AccessLevel.SYSTEM_MODE;
+  }
+
+  public class OrderBySorter implements System.Comparator<RollupOrderBy__mdt> {
+    private final List<Schema.SObjectField> sortFields = new List<Schema.SObjectField>{ RollupOrderBy__mdt.Ranking__c, RollupOrderBy__mdt.DeveloperName };
+    public Integer compare(RollupOrderBy__mdt first, RollupOrderBy__mdt second) {
+      Integer returnValue = 0;
+      List<Schema.SObjectField> localSortFields = new List<Schema.SObjectField>(this.sortFields);
+      while (returnValue == 0 && localSortFields.isEmpty() == false) {
+        Schema.SObjectField field = localSortFields.remove(0);
+        Object firstSortValue = first.get(field);
+        Object secondSortValue = second.get(field);
+
+        if (firstSortValue instanceof Decimal) {
+          returnValue = this.getDecimalSortedValue((Decimal) firstSortValue, (Decimal) secondSortValue);
+        } else if (firstSortValue instanceof String) {
+          returnValue = ((String) firstSortValue).compareTo((String) secondSortValue);
+        }
+      }
+      return returnValue;
+    }
+
+    private Integer getDecimalSortedValue(Decimal first, Decimal second) {
+      Integer returnValue = 0;
+      if (first > second) {
+        returnValue = 1;
+      } else if (first < second) {
+        returnValue = -1;
+      }
+      return returnValue;
+    }
   }
 }
